Bug 1220457 - Show deprecation warning for non-standard RegExp.multiline. r=till